--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <p>
         Cybersecurity specialists plan, implement, upgrade, and monitor security measures to protect computer networks and information.
     </p>
-    <a href="job1info.html">More Info</a>
+    <a class="more-info" href="job1info.html">More Info</a>
     <h2>Network Engineer</h2>
     <p>
         Network engineers are responsible for designing, planning, and implementing network infrastructures, including local area networks (LANs), wide area networks (WANs), and intranets.
     </p>
+    <a class="more-info" href="job2info.html">More Info</a>
 </body>
 </html>
