--- a/job1info.html
+++ b/job1info.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="https://legendary-giggle-4j9rq9vj4pg427r4w-5500.app.github.dev/">Home</a>
+    <a id="home" href="https://legendary-giggle-4j9rq9vj4pg427r4w-5500.app.github.dev/">Home</a>
     <h1>Cybersecurity Specialist</h1>
     <p>
         The cybersecurity specialist role is an ideal starting point for those aiming to advance to a cybersecurity analyst position.
